<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Homework3_2"
    android:usesCleartextTraffic="true"
    >

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/a" />

    <TextView
        android:id="@+id/showOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
       />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/c" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/d" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/e" />

    <Button
        android:id="@+id/btn_opencfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="openOne"

        android:text="@string/btn_opencfg_label" />

</LinearLayout>